fix issue when scenarios had multiple ingress tasks
improved logging

updated conductor to version 3.14.0